using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class PlayerAnimParmaeterLiteral
{
    public static readonly string DieTrigger = "Die";
    public static readonly string ReviveTrigger = "Revive";
    public static readonly string JumpTrigger = "Jump";
    public static readonly string DashTrigger = "Dash";
    public static readonly string RunTrigger = "Run";
    public static readonly string IdleTrigger = "Idle";
    public static readonly string FallTrigger = "Fall";
}
